--- a/SpaceAstra/SpaceAstra.vcxproj
+++ b/SpaceAstra/SpaceAstra.vcxproj
@@ -130,11 +130,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="space_rendering.cpp" />
-    <ClCompile Include="SpaceAstra.cpp" />
+    <ClCompile Include="src\space_rendering.cpp" />
+    <ClCompile Include="src\SpaceAstra.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="space_rendering.h" />
+    <ClInclude Include="headers\space_rendering.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
