--- a/SpaceAstra/SpaceAstra.vcxproj.filters
+++ b/SpaceAstra/SpaceAstra.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="src\space_rendering.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\physics_calculation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\movement_code.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\space_rendering.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\physics_calculation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\movement_code.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
