--- a/SpaceAstra/SpaceAstra.vcxproj.filters
+++ b/SpaceAstra/SpaceAstra.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\movement_code.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="velocity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\space_rendering.h">
